Fixed the view details button visibility on hover in dark mode (#47)

--- a/assets/pastevents/pastevents.css
+++ b/assets/pastevents/pastevents.css
@@ -114,5 +114,5 @@ body.dark-mode .past-event-date,
 }
 
 .gallery-button:hover {
-    background-color: var(--text-color);
+    background-color: #686969;
 }
